# ignore_gates

./: .gitignore  README.md  build.sh  clean_data.py  control.csv  graph.r  graphs.r  ignore_select.csv  list_num_aux.sh  makefile  nogates.csv  original.csv  plot.py  plots.tex  run.sh  run_with_kissat.sh  starexec_build  stats.r  test.csv  timings.r  verify.py  verify_unsat.py
cadical/: CHANGELOG.md  makefile
cadical/src/: analyze.cpp  backtrack.cpp  cadical.cpp  cadical.hpp  compact.cpp  decide.cpp  elim.cpp  external.cpp  external.hpp  internal.cpp  internal.hpp  makefile  parse.cpp  parse.hpp  queue.cpp  restart.cpp  score.cpp  solver.cpp  stats.cpp
cnftools/: CMakeLists.txt  README.md  benchmark.sh  install-pymod.sh  setup.py  test.cnf
cnftools/lib/argparse/: argparse.hpp
cnftools/src/: CMakeLists.txt  Main.cc  gbdlib.cc
cnftools/src/features/: CMakeLists.txt  CNFStats.h  GateStats.h  Util.h
cnftools/src/gates/: BlockList.h  CMakeLists.txt  GateAnalyzer.h  GateFormula.h  OccurrenceList.h
cnftools/src/transform/: CMakeLists.txt  IndependentSet.h  Normalize.h
cnftools/src/util/: CMakeLists.txt  CNFFormula.h  GBDHash.h  ResourceLimits.h  Stamp.h  StreamBuffer.h
kissat/: CHANGELOG.md  makefile  select_aux.py  select_aux_graph.py  select_aux_temp1.py
kissat/src/: eliminate.c  resolve.c
results/: auxlist.csv  better_worse.xlsx  extract.py  graphs.r  plots.tex  results.csv  results.xlsx  sat_timed.csv  stats.r  timing.xlsx  timings.r  top6.xlsx  unsat_timed.csv  verify.py
results/control/: info.csv
results/info/: br.elim.uip_info.csv  cnftools_info.csv  control_info.csv  kissat_info.csv  lastuip_info.csv  sideffects_info.csv
results/kissat-elimaux/: info.csv
(+4 files in other folders)
